[tool.poetry]
name = "disten-py"
version = "0.1.0"
description = ""
authors = ["nnao45 <n4sekai5y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
scipy = "1.6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
